# nasdaq-itch-order-book

./: .gitignore  README.md  buildit.sh  runit.sh
SampleOutput/: sample_vwap_1.txt  sample_vwap_2.txt  sample_vwap_3.txt  sample_vwap_4.txt  sample_vwap_5.txt  sample_vwap_6.txt  sample_vwap_7.txt
SampleOutputSPSC/: sample_vwap_1.txt  sample_vwap_2.txt  sample_vwap_3.txt  sample_vwap_4.txt  sample_vwap_5.txt  sample_vwap_6.txt  sample_vwap_7.txt
src/: CMakeLists.txt  main.cpp
src/bookkeeping/: OrderBook.cpp  OrderBook.h  VWAPManager.cpp  VWAPManager.h
src/data_structures/: mempool.h
src/messages/: AddOrder.cpp  AddOrder.h  AddOrderMPID.cpp  AddOrderMPID.h  BrokenTradeOrOrderExecution.cpp  BrokenTradeOrOrderExecution.h  CrossTrade.cpp  CrossTrade.h  Message.h  MessageHeader.cpp  MessageHeader.h  OrderCancel.cpp  OrderCancel.h  OrderDelete.cpp  OrderDelete.h  OrderExecuted.cpp  OrderExecuted.h  OrderExecutedWithPrice.cpp  OrderExecutedWithPrice.h  OrderReplace.cpp  OrderReplace.h  ProcessMessage.cpp  ProcessMessage.h  SentinelMessage.h  StockTradingAction.cpp  StockTradingAction.h  SystemEvent.cpp  SystemEvent.h  TradeNonCross.cpp  TradeNonCross.h  common.cpp  common.h
src/utils/: endian_utils.cpp  endian_utils.h  queue_utils.cpp  queue_utils.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
